[package]
name = "psrt"
version = "0.1.12"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/alttch/psrt"
description = "Industrial Pub-Sub server with minimal latency and MQTT-compatible logic"
readme = "README.md"
keywords = ["pubsub", "server", "client"]

[lib]
name = "psrt"
path = "src/lib.rs"

[[bin]]
name = "psrtd"
path = "src/server.rs"
required-features = ["server"]

[[bin]]
name = "psrt-cli"
path = "src/cli.rs"
required-features = ["cli"]

[profile.dev]
overflow-checks = false

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
rand = "0.8.4"
lazy_static = "1.4.0"
log = "0.4.14"
hex = "0.4.2"
nix = "0.22.1"
webpki-roots = "0.22"
tokio-rustls = "0.23.0"
rustls-pemfile = "0.2.1"
async-channel = "1.6.1"
serde = { version =  "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = { version = "=3.0.0-beta.2", optional = true }
clap_derive = { version = "=3.0.0-beta.2", optional = true }
syslog = { version = "5.0.0", optional = true }
chrono = { version = "0.4.19", optional = true }
colored = { version = "2", optional = true }
env_logger = { version = "0.9.0", optional = true }
bcrypt = { version = "0.10.1", optional = true }
fork = { version = "0.1.18", optional = true }
bma-benchmark = { version = "0.0.17", optional = true }
byte-unit = { version = "4.0.13", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
serde_json = { version = "1.0.68", optional = true }
base64 = { version = "0.13.0", optional = true }
hostname = { version = "0.3.1", optional = true }
term_size = { version = "0.3.2", optional = true }
prettytable-rs = { version = "^0.8", optional = true }
num-format = { version = "0.4.0", optional = true }
getch = { version = "0.2.1", optional = true }

[features]
cluster = []
cli = ["bma-benchmark", "byte-unit", "clap", "clap_derive", "env_logger",
       "term_size", "prettytable-rs", "num-format", "getch"]
server = ["base64", "bcrypt", "clap", "clap_derive", "colored", "chrono", "fork",
          "hostname", "hyper", "serde_json", "syslog"]
